# context-of-code-web-app

./: .env.example  .gitignore  alembic.ini  init_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 338bc73f4e1d_initial_migration.py  487e2f50cb3b_initial_migration.py  de676024dd3b_add_units_table_and_update_metric_types.py
web_app/: command_relay.py  config.py  database.py  main.py  models.py  schemas.py
web_app/static/js/: command_relay.js
web_app/templates/: advanced_dashboard.html  command_relay.html  current_dashboard.html  dashboard.html
